# WordPressRestApi

./: .gitignore  README.md  pyproject.toml
wordpressrestapi/: __init__.py  main.py
