[project]
name = "wordpress-rest-api"
version = "0.1.1"
description = "WordPress REST API client"
authors = [
    {name = "chenbanyaner", email = "833785@qq.com"},
]
dependencies = ["requests>=2.33.1"]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[tool.setuptools.packages.find]
where = ["."]
include = ["wordpressrestapi*"]


[tool.pdm]
distribution = true


[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"
[dependency-groups]
build = [
    "build>=1.4.4",
    "twine>=6.2.0",
]
